Add network annotation for CustomizationWallpaperDownloader.

Add network annotation for CustomizationWallpaperDownloader and remove
the MISSING_TRAFFIC_ANNOTATION tag.

Bug: 833390
Test: Ran auditor.py locally on target = "chromeos" build.

Change-Id: I338ffd9e7328a59c59a8e15f4b400d714bb219b8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3223516
Reviewed-by: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Commit-Queue: Ramya Gopalan <ramyagopalan@google.com>
Cr-Commit-Position: refs/heads/main@{#935573}